<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4CAF50"
    tools:context=".MainMenu">

    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="210dp">

        <EditText
            android:id="@+id/company"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:autofillHints="@string/Şirket"
            android:drawableTint="#9C27B0"
            android:hint="@string/Şirket"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColor="#fff"
            tools:targetApi="o" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">


        <EditText
            android:id="@+id/lat"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            tools:layout_editor_absoluteX="41dp"
            tools:layout_editor_absoluteY="16dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal"
            android:autofillHints="@string/lat"
            android:hint="@string/lat"
            android:textColor="#fff"
            tools:targetApi="o" />



    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp">

        <EditText
            android:id="@+id/long1"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            tools:layout_editor_absoluteX="41dp"
            tools:layout_editor_absoluteY="64dp"
            android:autofillHints="@string/long1"
            android:hint="@string/long1"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal"
            android:importantForAutofill="no"
            android:textColor="#fff"
            tools:targetApi="o" />


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="260dp" >

        <EditText
            android:id="@+id/uzaklik"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:autofillHints="@string/uzaklık"
            android:ems="10"
            android:hint="@string/uzaklık"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:textColor="#fff"
            tools:layout_editor_absoluteX="41dp"
            tools:layout_editor_absoluteY="64dp"
            tools:targetApi="o" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/manuel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="250dp"
        android:layout_marginTop="40dp"
        android:text="@string/manuel"
        tools:layout_editor_absoluteX="270dp"
        tools:layout_editor_absoluteY="7dp"
        android:background="#2196F3"
        android:textColor="#fff"/>

    <Button
        android:id="@+id/auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="250dp"
        android:layout_marginTop="100dp"
        android:text="@string/auto"
        tools:layout_editor_absoluteX="270dp"
        tools:layout_editor_absoluteY="56dp"
        android:background="#2196F3"
        android:textColor="#fff"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="160dp"
        android:entries="@array/Gps"
        tools:layout_editor_absoluteX="102dp"
        tools:layout_editor_absoluteY="16dp"></Spinner>

    <Button
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="250dp"
        android:layout_marginTop="250dp"
        android:text="@string/arama"
        tools:layout_editor_absoluteX="270dp"
        tools:layout_editor_absoluteY="7dp"
        android:background="#2196F3"
        android:textColor="#fff"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="330dp"
        android:scrollbars="vertical">

    </android.support.v7.widget.RecyclerView>


</android.support.design.widget.CoordinatorLayout>